[gd_scene load_steps=11 format=2]

[ext_resource path="res://AutoLoads/PauseMenuController.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menus/Music&Sounds/breakfast.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Menus/Music&Sounds/fard.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Nodes/ChoiceMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Nodes/OptionsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://mobile_controls/Enter.tscn" type="PackedScene" id=7]
[ext_resource path="res://mobile_controls/Scroll.tscn" type="PackedScene" id=8]
[ext_resource path="res://mobile_controls/Scroll_Hoz.tscn" type="PackedScene" id=9]
[ext_resource path="res://mobile_controls/GoBack.tscn" type="PackedScene" id=10]

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Node2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu"]
margin_left = 729.0
margin_top = 13.0
margin_right = 1268.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "SONG NAME
HARD"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="CanvasLayer/PauseMenu" instance=ExtResource( 5 )]

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="CanvasLayer" parent="CanvasLayer" instance=ExtResource( 7 )]
layer = 5

[node name="CanvasLayer2" parent="CanvasLayer" instance=ExtResource( 8 )]
layer = 5

[node name="CanvasLayer3" parent="CanvasLayer" instance=ExtResource( 9 )]
layer = 5

[node name="CanvasLayer4" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="launchbox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0

[node name="fard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -1.0

[node name="Tween" type="Tween" parent="."]

[connection signal="option_selected" from="CanvasLayer/PauseMenu/Options" to="." method="option_selected"]
